@@ -55,7 +55,7 @@ import org.gjt.sp.util.Log;
  *
  * @author Slava Pestov
  * @author John Gellene (API documentation)
- * @version $Id: JEditTextArea.java,v 1.311 2004/04/08 20:07:37 spestov Exp $
+ * @version $Id: JEditTextArea.java,v 1.312 2004/04/28 18:18:39 spestov Exp $
  */
 public class JEditTextArea extends JComponent
 {
@@ -5235,10 +5235,15 @@ loop:			for(int i = lineNo + 1; i < getLineCount(); i++)
 			return;
 		int height = painter.getHeight();
 		int lineHeight = painter.getFontMetrics().getHeight();
-		visibleLines = height / lineHeight;
-		lastLinePartial = (height % lineHeight != 0);
-		if(lastLinePartial)
-			visibleLines++;
+		if(lineHeight == 0)
+			visibleLines = 0;
+		else
+		{
+			visibleLines = height / lineHeight;
+			lastLinePartial = (height % lineHeight != 0);
+			if(lastLinePartial)
+				visibleLines++;
+		}
 
 		chunkCache.recalculateVisibleLines();
 
